@@ -2,7 +2,7 @@
 # These are the default configuration values.  To override them, create a file local.properties.
 
 # Version of the library that will be published to Maven
-config_mavenPublishVersion=5.8.0
+config_mavenPublishVersion=5.8.1
 
 # GWT version
 config_gwtVersion=2.7.0
